--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+report.[0-ㅣ9]*.[0-9]*.[0-9]*.[0-9]*.json
 pids
 *.pid
 *.seed
